<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:gravity="center_horizontal">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/activity_main_headline"
                android:layout_marginBottom="@dimen/activity_main_headline_margin_bottom"/>
            <Button
                style="@style/AppButton"
                android:id="@+id/activity_main_btn_spotify_streamer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_main_button_margins"
                android:text="@string/activity_main_spotify_streamer"/>
            <Button
                style="@style/AppButton"
                android:id="@+id/activity_main_btn_scores_app"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_main_button_margins"
                android:text="@string/activity_main_scores_app"/>
            <Button
                style="@style/AppButton"
                android:id="@+id/activity_main_btn_library_app"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_main_button_margins"
                android:text="@string/activity_main_library_app"/>
            <Button
                style="@style/AppButton"
                android:id="@+id/activity_main_btn_build_it_bigger"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_main_button_margins"
                android:text="@string/activity_main_build_it_bigger"/>
            <Button
                style="@style/AppButton"
                android:id="@+id/activity_main_btn_xyz_reader"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_main_button_margins"
                android:text="@string/activity_main_xyz_reader"/>
            <Button
                style="@style/AppButtonFinal"
                android:id="@+id/activity_main_btn_my_own_app"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/activity_main_button_margins"
                android:text="@string/activity_main_my_own_app"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
